need to run make base before make custom

--- a/tools/Makefile
+++ b/tools/Makefile
@@ -3,7 +3,7 @@ all: base custom
 base:
 	./install-base.sh
 
-custom:
+custom: base
 	./texlive/bin/*/tlmgr install $(cat pkgs-custom.txt | tr '\n' ' ')
 
 bin:
