--- a/tools/Makefile
+++ b/tools/Makefile
@@ -4,7 +4,7 @@ base:
 	./install-base.sh
 
 custom: base
-	./texlive/bin/*/tlmgr install $(cat pkgs-custom.txt | tr '\n' ' ')
+	./texlive/bin/*/tlmgr install $$(cat pkgs-custom.txt | tr '\n' ' ')
 
 bin:
 	mkdir bin && cd bin && ln -s ../texlive/bin/*/* ./
