--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,14 @@
 Package: tinytex
 Type: Package
-Title: A Collection of Helper Functions to Install and Maintain LaTeX
+Title: A Collection of Helper Functions to Install and Maintain TeX Live
 Version: 0.0.0
 Authors@R: c(
-  person("Yihui", "Xie", role = c("aut", "cre"), email = "xie@yihui.name", comment = c(ORCID = "0000-0003-0645-5666")),
+  person("Yihui", "Xie", role = c("aut", "cre", "cph"), email = "xie@yihui.name", comment = c(ORCID = "0000-0003-0645-5666")),
+  person(family = "RStudio, Inc.", role = "cph"),
   person()
   )
 Description: Helper functions for the LaTeX distribution named 'TinyTeX'.
 License: MIT | file LICENSE
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 6.0.1
