--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,9 @@ Authors@R: c(
   person()
   )
 Description: Helper functions for the LaTeX distribution named 'TinyTeX'.
-License: MIT | file LICENSE
+License: MIT + file LICENSE
+URL: https://yihui.name/tinytex/
+BugReports: https://github.com/yihui/tinytex/issues
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
