add a function uninstall_tinytex()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,5 +10,6 @@ export(tlmgr_path)
 export(tlmgr_remove)
 export(tlmgr_search)
 export(tlmgr_update)
+export(uninstall_tinytex)
 import(stats)
 import(utils)
