roxygenize and bump version

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,9 @@
 
 export(find_packages)
 export(install_tinytex)
+export(latexmk)
+export(lualatex)
+export(pdflatex)
 export(r_texmf)
 export(tlmgr)
 export(tlmgr_conf)
@@ -11,5 +14,7 @@ export(tlmgr_remove)
 export(tlmgr_search)
 export(tlmgr_update)
 export(uninstall_tinytex)
+export(xelatex)
 import(stats)
+import(tools)
 import(utils)
