--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,16 @@
 Package: tinytex
 Type: Package
-Title: Helper Functions to Install and Maintain LaTeX, and Compile LaTeX Documents
+Title: Helper Functions to Install and Maintain 'LaTeX', and Compile 'LaTeX' Documents
 Version: 0.0.22
 Authors@R: c(
   person("Yihui", "Xie", role = c("aut", "cre", "cph"), email = "xie@yihui.name", comment = c(ORCID = "0000-0003-0645-5666")),
   person(family = "RStudio, Inc.", role = "cph"),
   person()
   )
-Description: Helper functions to install and maintain the LaTeX distribution
-  named 'TinyTeX', which is small and portable version of TeX Live. This package
-  also contains helper functions to compile LaTeX documents, and install missing
-  LaTeX packages automatically.
+Description: Helper functions to install and maintain the 'LaTeX' distribution
+  named 'TinyTeX', a lightweight and portable version of TeX Live. This package
+  also contains helper functions to compile 'LaTeX' documents, and install missing
+  'LaTeX' packages automatically.
 Suggests: testit
 License: MIT + file LICENSE
 URL: https://yihui.name/tinytex/
