--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,9 +8,9 @@ Authors@R: c(
   person()
   )
 Description: Helper functions to install and maintain the 'LaTeX' distribution
-  named 'TinyTeX', a lightweight and portable version of TeX Live. This package
-  also contains helper functions to compile 'LaTeX' documents, and install missing
-  'LaTeX' packages automatically.
+  named 'TinyTeX' (<https://yihui.name/tinytex/>), a lightweight and portable
+  version of 'TeX Live'. This package also contains helper functions to compile
+  'LaTeX' documents, and install missing 'LaTeX' packages automatically.
 Suggests: testit
 License: MIT + file LICENSE
 URL: https://yihui.name/tinytex/
