--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: tinytex
 Type: Package
-Title: Helper Functions to Install and Maintain 'LaTeX', and Compile 'LaTeX' Documents
+Title: Helper Functions to Install and Maintain 'TeX Live', and Compile 'LaTeX' Documents
 Version: 0.1.6
 Authors@R: c(
   person("Yihui", "Xie", role = c("aut", "cre", "cph"), email = "xie@yihui.name", comment = c(ORCID = "0000-0003-0645-5666")),
@@ -8,12 +8,13 @@ Authors@R: c(
   person()
   )
 Description: Helper functions to install and maintain the 'LaTeX' distribution
-  named 'TinyTeX' (<https://yihui.name/tinytex/>), a lightweight and portable
-  version of 'TeX Live'. This package also contains helper functions to compile
-  'LaTeX' documents, and install missing 'LaTeX' packages automatically.
+  named 'TinyTeX' (<https://yihui.name/tinytex/>), a lightweight, cross-platform,
+  portable, and easy-to-maintain version of 'TeX Live'. This package also
+  contains helper functions to compile 'LaTeX' documents, and install missing
+  'LaTeX' packages automatically.
 Suggests: testit
 License: MIT + file LICENSE
-URL: https://yihui.name/tinytex/
+URL: https://github.com/yihui/tinytex
 BugReports: https://github.com/yihui/tinytex/issues
 Encoding: UTF-8
 LazyData: true
