roxygenize and bump version

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(lualatex)
 export(parse_packages)
 export(pdflatex)
 export(r_texmf)
+export(tl_sizes)
 export(tlmgr)
 export(tlmgr_conf)
 export(tlmgr_install)
