(Does pdftotext exist on travis?)

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,3 +14,4 @@ before_install:
 
 after_success:
   - "(curl https://xran.yihui.name/r-xran | bash)"
+  - Rscript -e 'cat(Sys.which("pdftotext"))'
