--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,11 @@
 Package: tinytex
 Type: Package
 Title: Helper Functions to Install and Maintain 'TeX Live', and Compile 'LaTeX' Documents
-Version: 0.3.3
+Version: 0.3.4
 Authors@R: c(
   person("Yihui", "Xie", role = c("aut", "cre", "cph"), email = "xie@yihui.name", comment = c(ORCID = "0000-0003-0645-5666")),
   person(family = "RStudio, Inc.", role = "cph"),
+  person("Fernando", "Cagua", role = "ctb"),
   person()
   )
 Description: Helper functions to install and maintain the 'LaTeX' distribution
