roxygenize and bump version

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,8 @@ export(lualatex)
 export(parse_packages)
 export(pdflatex)
 export(r_texmf)
+export(reinstall_tinytex)
+export(tl_pkgs)
 export(tl_sizes)
 export(tlmgr)
 export(tlmgr_conf)
