--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,8 +1,5 @@
-init:
-  ps: Invoke-WebRequest https://github.com/yihui/tinytex/raw/master/tools/install-windows.bat -OutFile install-windows.bat
-
 build_script:
-  - install-windows.bat
+  - tools\install-windows.bat
 
 test_script:
   - tlmgr --version
