--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: tinytex
 Type: Package
 Title: Helper Functions to Install and Maintain 'TeX Live', and Compile 'LaTeX' Documents
-Version: 0.5.6
+Version: 0.5.7
 Authors@R: c(
   person("Yihui", "Xie", role = c("aut", "cre", "cph"), email = "xie@yihui.name", comment = c(ORCID = "0000-0003-0645-5666")),
   person(family = "RStudio, Inc.", role = "cph"),
@@ -13,6 +13,7 @@ Description: Helper functions to install and maintain the 'LaTeX' distribution
   portable, and easy-to-maintain version of 'TeX Live'. This package also
   contains helper functions to compile 'LaTeX' documents, and install missing
   'LaTeX' packages automatically.
+Imports: xfun
 Suggests: testit
 License: MIT + file LICENSE
 URL: https://github.com/yihui/tinytex
@@ -20,3 +21,4 @@ BugReports: https://github.com/yihui/tinytex/issues
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
+Remotes: yihui/xfun
