just install ghostscript automatically for epstopdf

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,3 +23,5 @@ import(tools)
 import(utils)
 importFrom(xfun,download_file)
 importFrom(xfun,is_linux)
+importFrom(xfun,is_macos)
+importFrom(xfun,is_unix)
