--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,7 @@ Description: Helper functions to install and maintain the 'LaTeX' distribution
   contains helper functions to compile 'LaTeX' documents, and install missing
   'LaTeX' packages automatically.
 Imports: xfun (>= 0.3)
-Suggests: testit, covr
+Suggests: testit
 License: MIT + file LICENSE
 URL: https://github.com/yihui/tinytex
 BugReports: https://github.com/yihui/tinytex/issues
