tweak PATH on Windows, too, in case both MiKTeX and TinyTeX are installed, or users didn't restart the IDE (like in #62)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,3 +25,4 @@ importFrom(xfun,download_file)
 importFrom(xfun,is_linux)
 importFrom(xfun,is_macos)
 importFrom(xfun,is_unix)
+importFrom(xfun,is_windows)
