create a zip package of TinyTeX as the artifact

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,3 +8,8 @@ test_script:
   - tlmgr --version
   - pdflatex --version
   - xelatex --version
+  - 7z a TinyTeX.zip %APPDATA%\\TinyTeX
+
+artifacts:
+  - path: TinyTeX.zip
+    name: TinyTeX
