--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: tinytex
 Type: Package
 Title: Helper Functions to Install and Maintain 'TeX Live', and Compile 'LaTeX' Documents
-Version: 0.7.1
+Version: 0.7.2
 Authors@R: c(
   person("Yihui", "Xie", role = c("aut", "cre", "cph"), email = "xie@yihui.name", comment = c(ORCID = "0000-0003-0645-5666")),
   person(family = "RStudio, Inc.", role = "cph"),
@@ -14,7 +14,7 @@ Description: Helper functions to install and maintain the 'LaTeX' distribution
   contains helper functions to compile 'LaTeX' documents, and install missing
   'LaTeX' packages automatically.
 Imports: xfun (>= 0.3)
-Suggests: testit
+Suggests: testit, rstudioapi
 License: MIT + file LICENSE
 URL: https://github.com/yihui/tinytex
 BugReports: https://github.com/yihui/tinytex/issues
