import xfun::with_ext()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,3 +28,4 @@ importFrom(xfun,is_linux)
 importFrom(xfun,is_macos)
 importFrom(xfun,is_unix)
 importFrom(xfun,is_windows)
+importFrom(xfun,with_ext)
