--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,6 +6,7 @@ Authors@R: c(
   person("Yihui", "Xie", role = c("aut", "cre", "cph"), email = "xie@yihui.name", comment = c(ORCID = "0000-0003-0645-5666")),
   person(family = "RStudio, Inc.", role = "cph"),
   person("Fernando", "Cagua", role = "ctb"),
+  person("Ethan", "Heinzen", role = "ctb"),
   person()
   )
 Description: Helper functions to install and maintain the 'LaTeX' distribution
