--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,7 +10,7 @@ Authors@R: c(
   person()
   )
 Description: Helper functions to install and maintain the 'LaTeX' distribution
-  named 'TinyTeX' (<https://yihui.name/tinytex/>), a lightweight, cross-platform,
+  named 'TinyTeX' (<https://yihui.org/tinytex/>), a lightweight, cross-platform,
   portable, and easy-to-maintain version of 'TeX Live'. This package also
   contains helper functions to compile 'LaTeX' documents, and install missing
   'LaTeX' packages automatically.
