--- a/appveyor.yml
+++ b/appveyor.yml
@@ -16,6 +16,7 @@ cache:
 build_script:
   - set PATH=%PATH:C:\MinGW\msys\1.0\bin;=%
   - echo | tools\install-windows.bat
+  - Rscript -e "update.packages(ask = FALSE, checkBuilt = TRUE)"
 
 test_script:
   - tlmgr --version
