close #207: install additional packages in the prebuilt version

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -22,6 +22,7 @@ test_script:
   - tlmgr --version
   - pdflatex --version
   - xelatex --version
+  - Rscript -e "tinytex::tlmgr_install(readLines('tools/pkgs-yihui.txt'))"
   - 7z a TinyTeX.zip %APPDATA%\\TinyTeX
   - travis-tool.sh install_deps
   - travis-tool.sh run_tests
