install a minimal scheme of TeX Live, compile a bookdown demo to install missing LaTeX packages automatically, and compare the installed packages with the required packages to make sure the default installation has included all required packages (#207)

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ cache: packages
 
 env:
   global:
-    - R_PKG="$(basename $TRAVIS_REPO_SLUG)"
+    - R_PKG="$(basename $TRAVIS_REPO_SLUG)" _R_CHECK_TESTS_NLINES_=0
 
 repos:
   XRAN: https://xran.yihui.org
