compile a document with different latex engines and pdf_document/beamer_presentation output formats, to make sure the TinyTeX distribution actually works before uploading it to appveyor

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -27,6 +27,7 @@ test_script:
   - travis-tool.sh install_deps
   - travis-tool.sh run_tests
   - R CMD INSTALL .
+  - Rscript "tools/test-basic.R"
   - Rscript -e "tinytex::install_tinytex(force = TRUE)"
 
 artifacts:
