set the CRAN repo in .Rprofile in order to install.packages()

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -52,6 +52,7 @@ for:
   install:
     - brew install pandoc pandoc-citeproc
     - brew cask install r
+    - echo 'options(repos = "https://cran.rstudio.com")' > ~/.Rprofile
     - echo 'R_LIBS_USER="~/R"' > ~/.Renviron
     - Rscript -e "install.packages('tinytex', dependencies = TRUE)"
     - R CMD INSTALL .
