--- a/appveyor.yml
+++ b/appveyor.yml
@@ -36,12 +36,15 @@ for:
     - R CMD INSTALL .
     - Rscript "tools/test-basic.R"
     - 7z a TinyTeX.zip %APPDATA%\\TinyTeX
+    - ps: Compress-Archive %APPDATA%\\TinyTeX TinyTeX-ps.zip
     - travis-tool.sh run_tests
     - Rscript -e "tinytex::install_tinytex(force = TRUE)"
 
   artifacts:
     - path: TinyTeX.zip
       name: TinyTeX
+    - path: TinyTeX-ps.zip
+      name: TinyTeX-ps
 
 -
   matrix:
