--- a/appveyor.yml
+++ b/appveyor.yml
@@ -35,16 +35,13 @@ for:
     - travis-tool.sh install_deps
     - R CMD INSTALL .
     - Rscript "tools/test-basic.R"
-    - 7z a TinyTeX.zip %APPDATA%\\TinyTeX
-    - ps: Compress-Archive $Env:APPDATA\\TinyTeX TinyTeX-ps.zip
+    - ps: Compress-Archive $Env:APPDATA\\TinyTeX TinyTeX.zip
     - travis-tool.sh run_tests
     - Rscript -e "tinytex::install_tinytex(force = TRUE)"
 
   artifacts:
     - path: TinyTeX.zip
       name: TinyTeX
-    - path: TinyTeX-ps.zip
-      name: TinyTeX-ps
 
 -
   matrix:
