move test-packages out of the tests/ directory, so it is easier to install additional packages such as bookdown and kableExtra
this is because R CMD check ignores packages are not formally specified as hard or soft dependencies in the package DESCRIPTION, and I don't really need bookdown or kableExtra to be even soft dependencies of tinytex

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,6 @@ language: r
 sudo: false
 cache: packages
 pandoc_version: 2.7.3
-r_packages:
-  - kableExtra
 
 env:
   global:
@@ -12,6 +10,9 @@ env:
 before_install:
   - "curl -L https://xran.yihui.org/.gitconfig -o ~/.gitconfig"
   - Rscript -e 'if (!require("covr")) install.packages("covr")'
+
+before_script:
+  - Rscript tools/test-packages.R
 
 after_success:
   - Rscript -e 'covr::codecov()'
