--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,7 +15,7 @@ Description: Helper functions to install and maintain the 'LaTeX' distribution
   contains helper functions to compile 'LaTeX' documents, and install missing
   'LaTeX' packages automatically.
 Imports: xfun (>= 0.5)
-Suggests: testit, rstudioapi, bookdown
+Suggests: testit, rstudioapi
 License: MIT + file LICENSE
 URL: https://github.com/yihui/tinytex
 BugReports: https://github.com/yihui/tinytex/issues
