--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ before_install:
   - Rscript -e 'if (!require("covr")) install.packages("covr")'
 
 before_script:
+  - R CMD INSTALL .
   - Rscript tools/test-packages.R
 
 after_success:
