--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: tinytex
 Type: Package
-Title: Helper Functions to Install and Maintain 'TeX Live', and Compile 'LaTeX' Documents
+Title: Helper Functions to Install and Maintain TeX Live, and Compile LaTeX Documents
 Version: 0.24.1
 Authors@R: c(
   person("Yihui", "Xie", role = c("aut", "cre", "cph"), email = "xie@yihui.name", comment = c(ORCID = "0000-0003-0645-5666")),
