check against more R versions

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,13 +7,16 @@ env:
   global:
     - R_PKG="$(basename $TRAVIS_REPO_SLUG)" _R_CHECK_TESTS_NLINES_=0
 
-before_install:
-  - "curl -L https://xran.yihui.org/.gitconfig -o ~/.gitconfig"
-  - Rscript -e 'if (!require("covr")) install.packages("covr")'
-
-before_script:
-  - Rscript tools/test-packages.R
-
-after_success:
-  - Rscript -e 'covr::codecov()'
-  - "(curl -L https://xran.yihui.org/r-xran | bash)"
+jobs:
+  include:
+    - r: oldrel
+    - r: release
+      before_install:
+        - "curl -L https://xran.yihui.org/.gitconfig -o ~/.gitconfig"
+        - Rscript -e 'if (!require("covr")) install.packages("covr")'
+      before_script:
+        - Rscript tools/test-packages.R
+      after_success:
+        - Rscript -e 'covr::codecov()'
+        - "(curl -L https://xran.yihui.org/r-xran | bash)"
+    - r: devel
