--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,9 @@ Description: Helper functions to install and maintain the 'LaTeX' distribution
   portable, and easy-to-maintain version of 'TeX Live'. This package also
   contains helper functions to compile 'LaTeX' documents, and install missing
   'LaTeX' packages automatically.
-Imports: xfun (>= 0.5)
+Imports: 
+    xfun (>= 0.5),
+    usethis (>= 1.6.1)
 Suggests: testit, rstudioapi
 License: MIT + file LICENSE
 URL: https://github.com/yihui/tinytex
@@ -22,3 +24,5 @@ BugReports: https://github.com/yihui/tinytex/issues
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
+Depends: 
+    R (>= 2.10)
