--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,7 @@ on:
     branches:
     - main
     - choco
+    - testchocolatey
 
 jobs:
   check:
@@ -17,7 +18,9 @@ jobs:
         cd "tools\choco\tinytex"
         choco pack
         choco install tinytex -source "'.;https://chocolatey.org/api/v2/'"  
-
+        choco uninstall tinytex
+        cd ..\..\
+        Start-Process "$($PWD)\install-windows.bat" -NoNewWindow -Wait
     - name: Upload Logs if failes
       uses: actions/upload-artifact@v2
       if: ${{ failure() }}
