Update the Chocolatey Package - Use prebuilt Executable (#240)

--- a/tools/choco/tinytex/tinytex.nuspec
+++ b/tools/choco/tinytex/tinytex.nuspec
@@ -7,11 +7,11 @@
     <packageSourceUrl>https://github.com/yihui/tinytex/tree/master/tools/choco/tinytex</packageSourceUrl>
     <owners>naveen521kk</owners>
     <title>TinyTex (Install)</title>
-    <authors>Naveen M K,Yihui Xie</authors>
+    <authors>TeX Live Developers</authors>
     <projectUrl>https://yihui.org/tinytex/</projectUrl>
     <iconUrl>https://yihui.org/images/logo-tinytex.png</iconUrl>
     <copyright>Copyright 2020 Naveen M K,Yihui Xie</copyright>
-    <licenseUrl>https://github.com/yihui/tinytex/blob/master/tools/choco/tinytex/LICENSE</licenseUrl>
+    <licenseUrl>https://tug.org/texlive/LICENSE.TL</licenseUrl>
     <requireLicenseAcceptance>true</requireLicenseAcceptance>
     <projectSourceUrl>https://github.com/yihui/tinytex/</projectSourceUrl>
     <docsUrl>https://yihui.org/tinytex/</docsUrl>
