--- a/appveyor.yml
+++ b/appveyor.yml
@@ -55,22 +55,6 @@ for:
     - path: TinyTeX.zip
       name: TinyTeX
 
-  deploy:
-    provider: GitHub
-    repository: yihui/tinytex-windows
-    tag: $(TINYTEX_TAG)
-    release: TinyTeX $(TINYTEX_TAG)
-    description: >
-      `TinyTeX-0.zip` contains the `infraonly` scheme of TeX Live, without any
-      LaTeX packages. `TinyTeX-1.zip` contains enough LaTeX packages to compile
-      R Markdown documents. `TinyTeX.zip` contains even more LaTeX packages.
-      Please see https://github.com/yihui/tinytex-windows for more info.
-    auth_token:
-      secure: 7J9/ZS/EeHhAuxS+mtlT7mPKyLSEmXHRXK1fhBGSptLTmcIFqTbdRHRcTcgEB89n
-    on:
-      branch: master
-      TINYTEX_RELEASE_DATE: true
-
 -
   matrix:
     only:
@@ -96,6 +80,8 @@ for:
   test_script:
     - Rscript "tools/test-basic.R"
     - tar zcf TinyTeX.tgz -C ~/Library TinyTeX
+    - Rscript "tools/release-github.R"
+    - sh tools/env-appveyor.bat
 
   artifacts:
     - path: TinyTeX-0.tgz
@@ -129,6 +115,8 @@ for:
     - export PATH="$HOME/bin:$PATH"
     - Rscript "tools/test-basic.R"
     - tar zcf TinyTeX.tar.gz -C ~ .TinyTeX
+    - Rscript "tools/release-github.R"
+    - sh tools/env-appveyor.bat
 
   artifacts:
     - path: TinyTeX-0.tar.gz
@@ -137,3 +125,20 @@ for:
       name: TinyTeX (rmarkdown)
     - path: TinyTeX.tar.gz
       name: TinyTeX
+
+deploy:
+  provider: GitHub
+  repository: yihui/tinytex-windows
+  tag: $(TINYTEX_TAG)
+  release: TinyTeX $(TINYTEX_TAG)
+  description: >
+    `TinyTeX-0` contains the `infraonly` scheme of TeX Live, without any LaTeX
+    packages. `TinyTeX-1` contains enough LaTeX packages to compile R Markdown
+    documents. `TinyTeX` contains even more LaTeX packages. The `zip` packages
+    are for Windows. The `tgz` packages are for macOS. The `tar.gz` packages are
+    for Linux. Please see https://github.com/yihui/tinytex-windows for more info.
+  auth_token:
+    secure: 7J9/ZS/EeHhAuxS+mtlT7mPKyLSEmXHRXK1fhBGSptLTmcIFqTbdRHRcTcgEB89n
+  on:
+    branch: master
+    TINYTEX_RELEASE_DATE: true
